# ads

./: .gitignore  ads.spec  adstool.spec  adtool  adtool.spec  configure  configure.ac
doc/: .gitignore  Makefile.am
package/: ads.changes  ads.spec
src/: Makefile.am  ads.in  adstool.in  adtool.in  vastool
